<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Extended settings</string>
    <string name="application_settings_title_head">Application</string>
    <string name="application_settings_title_subhead">Application settings</string>
    <string name="application_settings_summary_head">Application moving, install location, communication filtering</string>
    <string name="display_settings_title_head">Display</string>
    <string name="display_settings_title_subhead">Display settings</string>
    <string name="display_settings_summary_head">Display animations, rotation, timeouts</string>
    <string name="input_settings_title_head">Input</string>
    <string name="input_settings_title_subhead">Input settings</string>
    <string name="input_settings_summary_head">Input behavior, buttons, haptic feedback</string>
    <string name="interface_settings_title_head">Interface</string>
    <string name="interface_settings_summary_head">Interface tweaks, overscrolling, render effect</string>
    <string name="lockscreen_settings_title_head">Lockscreen</string>
    <string name="lockscreen_settings_title_subhead">Lockscreen settings</string>
    <string name="lockscreen_settings_summary_head">Lockscreen gestures, style, unlock options</string>
    <string name="performance_settings_title_head">Performance</string>
    <string name="performance_settings_title_subhead">Performance settings</string>
    <string name="performance_settings_summary_head">Performance tweaks, JIT, VM heap size, wifi scan policy</string>
    <string name="sound_settings_title_head">Sound</string>
    <string name="sound_settings_title_subhead">Sound settings</string>
    <string name="sound_settings_summary_head">Sound volumes, audio focus, quiet hours</string>
    <string name="system_settings_title_head">System</string>
    <string name="system_settings_title_subhead">System settings</string>
    <string name="system_settings_summary_head">System changelog, stats, update notifications</string>
    <string name="updatenotify_title">Update notifications</string>
    <string name="updatenotify_summary">Get push notifications of updates</string>
    <string name="ui_title">User interface</string>
    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
    <string name="tablet_tweaks_title_head">Tablet tweaks</string>
    <string name="tablet_tweaks_summary_head">Settings most useful for tablet devices collected in one place. Also working for phones</string>
    <string name="tablet_tweaks_sb_bottom_title">Bottom status bar</string>
    <string name="tablet_tweaks_sb_bottom_summary">Show status bar on bottom. Useful for tablets which use soft-buttons for home, menu, etc on status bar</string>
    <string name="tablet_tweaks_status_bar_dead_zone_title">Dead zone</string>
    <string name="tablet_tweaks_status_bar_dead_zone_summary">Add a dead zone of half screen width to the middle of the status bar</string>
    <string name="tablet_tweaks_soft_buttons_left_title">Soft-buttons left</string>
    <string name="tablet_tweaks_soft_buttons_left_summary">Put soft-buttons on left side of status bar</string>
    <string name="tablet_tweaks_soft_button_list_title">Choose soft-buttons</string>
    <string name="tablet_tweaks_interface_head">Interface</string>
    <string name="tablet_tweaks_disable_lockscreen_title">Disable lockscreen</string>
    <string name="tablet_tweaks_disable_lockscreen_summary">When enabled, does not show the lockscreen or pattern screen. Neither on boot, nor when waking the device</string>
    <string name="tablet_tweaks_disable_fullscreen_title">Disable fullscreen</string>
    <string name="tablet_tweaks_disable_fullscreen_summary">Override the fullscreen request of applications. When enabled, status bar is always visible until hidden by button</string>
    <string name="tablet_tweaks_unhide_button_list_head">Unhide button</string>
    <string name="tablet_tweaks_unhide_button_list_title">Choose unhide button</string>
    <string name="tablet_tweaks_extend_pm_title">Extend power menu</string>
    <string name="tablet_tweaks_extend_pm_summary">Add home/back/menu actions to the power menu</string>
    <string name="tablet_tweaks_extend_pm_list_title">Choose power menu buttons</string>
    <string name="tablet_tweaks_reverse_volume_behavior_title">Volume behavior reverse</string>
    <string name="tablet_tweaks_reverse_volume_behavior_summary_off">Volume buttons behave normal. Press for volume change, long press for user action</string>
    <string name="tablet_tweaks_reverse_volume_behavior_summary_on">Volume buttons behave reversed. Press for user action, long press for volume change</string>
    <string name="tablet_tweaks_input_head">Remap volume keys</string>
    <string name="tablet_tweaks_long_volp_action_title">Long press volume up</string>
    <string name="tablet_tweaks_long_volp_action_summary">Assign home/back/menu/etc action to volume button up long press. Limited to screen on</string>
    <string name="tablet_tweaks_long_volm_action_title">Long press volume down</string>
    <string name="tablet_tweaks_vol_both_action_title">Both volume buttons</string>
    <string name="tablet_tweaks_vol_both_action_summary">Note: Some devices do a hard wired reset on both volume buttons+power pressed</string>
    <string name="tablet_tweaks_long_vol_both_action_title">Long press both volume buttons</string>
    <string name="tablet_tweaks_extend_pm_list_head">Power menu buttons</string>
    <string name="tablet_tweaks_soft_buttons_list_head">Soft-buttons</string>
    <string name="tablet_soft_buttons_home_title">Home</string>
    <string name="tablet_soft_buttons_menu_title">Menu</string>
    <string name="tablet_soft_buttons_back_title">Back</string>
    <string name="tablet_soft_buttons_search_title">Search</string>
    <string name="tablet_soft_buttons_quick_na_title">Quick notifications</string>
    <string name="rotation_category_title">Accelerometer rotation</string>
    <string name="pref_rotation_0_title">0 degrees</string>
    <string name="pref_rotation_90_title">90 degrees</string>
    <string name="pref_rotation_180_title">180 degrees</string>
    <string name="pref_rotation_270_title">270 degrees</string>
    <string name="ui_colors_title">Text color tweaks</string>
    <string name="status_bar_color_title">Status bar</string>
    <string name="title_clock_color">Clock color</string>
    <string name="title_date_color">Date color</string>
    <string name="title_ticker_color">Ticker color</string>
    <string name="title_battery_percent_color">Battery percentage color</string>
    <string name="title_signaltext_color">Signal text color</string>
    <string name="notification_title">Notifications</string>
    <string name="title_carrier_color">Carrier color</string>
    <string name="title_none_color">No notification title color</string>
    <string name="title_latest_color">Latest notifications title color</string>
    <string name="title_ongoing_color">Ongoing notifications title color</string>
    <string name="title_clear_color">Clear button label color</string>
    <string name="notification_items_title">Notification items</string>
    <string name="title_item_title_color">Notification title color</string>
    <string name="title_item_text_color">Notification item color</string>
    <string name="title_item_time_color">Notification time color</string>
    <string name="ui_status_bar_title">Status bar tweaks</string>
    <string name="ui_status_bar_am_pm_title">AM/PM style</string>
    <string name="ui_status_bar_am_pm_summary">Display style of AM/PM next to clock</string>
    <string name="ui_status_bar_clock_title">Clock position</string>
    <string name="ui_status_bar_clock_summary">Display status bar clock position. </string>
    <string name="ui_status_bar_cm_battery_title">Battery style</string>
    <string name="ui_status_bar_cm_battery_summary">Change battery style. Set to \'Default\' if themes make this look broken</string>
    <string name="ui_status_bar_cm_battery_color_title">Status bar battery color</string>
    <string name="ui_status_bar_cm_battery_color_summary">Color to use for the status bar battery style</string>
    <string name="ui_status_bar_cm_battery_low_batt_title">Show low battery colors</string>
    <string name="ui_status_bar_cm_battery_low_batt_summary">Change status bar battery color if battery is low</string>
    <string name="ui_status_bar_compact_carrier_title">Compact carrier label</string>
    <string name="ui_status_bar_compact_carrier_summary">Use alternate notification dropdown layout with mini carrier label</string>
    <string name="ui_status_bar_carrier_label_title">Carrier label type</string>
    <string name="ui_status_bar_carrier_label_summary">Change what is used as carrier label</string>
    <string name="ui_status_bar_carrier_label_use_default">Default</string>
    <string name="ui_status_bar_carrier_label_use_spn">Show SPN</string>
    <string name="ui_status_bar_carrier_label_use_plmn">Show PLMN</string>
    <string name="ui_status_bar_carrier_label_use_custom">Custom text</string>
    <string name="ui_status_bar_carrier_label_custom_title">Custom carrier label</string>
    <string name="ui_status_bar_carrier_label_custom_summary">Text used instead of the operator provided carrier label</string>
    <string name="ui_status_bar_toggle_brightness">Status bar brightness control</string>
    <string name="ui_status_bar_toggle_brightness_summary">Allows adjusting of brightness by sliding across statusbar</string>
    <string name="ui_status_bar_toggle_info">Automatic brightness is enabled</string>
    <string name="ui_status_bar_cm_signal_text_title">Alternate signal display</string>
    <string name="ui_status_bar_cm_signal_text_summary">Show dBm value instead of signal bars</string>
    <string name="ui_status_bar_cm_signal_text_show_bars">Signal bars</string>
    <string name="ui_status_bar_cm_signal_text_show_text">Signal text</string>
    <string name="ui_status_bar_cm_signal_text_show_text_dbm">Signal text w/dBm</string>
    <string name="ui_status_bar_headset_title">Show headset icon</string>
    <string name="ui_status_bar_headset_summary">Headset icon will appear when headset is plugged in</string>
    <string name="ui_status_bar_hide_alarm_title">Hide Alarm Icon</string>
    <string name="ui_status_bar_hide_alarm_summary">Hide the alarm icon when alarm is set</string>
    <string name="trackball_title">LED notifications</string>
    <string name="trackball_summary">Control trackball/LED notification colors and pulse</string>
    <string name="pref_pinch_reflow_title">Reflow after pinch in</string>
    <string name="pref_pinch_reflow_summary">Reflow webview content immediately after pinch to zoom in</string>
    <string name="pref_share_screenshot_title">Share screenshots</string>
    <string name="pref_share_screenshot_summary">Show share menu on taking a screenshot</string>
    <string name="ui_overscroll_title">Overscrolling</string>
    <string name="pref_overscroll_title">Overscroll effect</string>
    <string name="pref_overscroll_summary">Choose how scrollable objects look when they overshoot</string>
    <string name="pref_overscroll_weight_title">Overscrolling weight</string>
    <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
    <string name="pref_overscroll_color_title">Overscroll color</string>
    <string name="pref_overscroll_color_summary">Select the color of the overscroll</string>
    <string name="pref_lockscreen_delay_title">Delay</string>
    <string name="pref_lockscreen_security_title">Security Lock</string>
    <string name="pref_lockscreen_security_delay_note_title">Note</string>
</resources>